# cryoet-deepfinder

./: README.md  pyproject.toml  requirements.txt  setup.cfg  step1.py  step1_generate_copick_training.py  step1_generate_mrc_training.py  step2.py  step2_launch_copick_training.py  step2_launch_mrc_training.py  step2_launch_training.py  step3.py  step3_batch_inference.py  step3_copick_inference.py  step4.py  step4_inference_export_to_copick.py
deepfinder/: __init__.py  callbacks.py  inference.py  losses.py  models.py  training.py  training_copick.py  training_mrc.py
deepfinder/models/: model_loader.py  res_unet.py  unet.py
deepfinder/utils/: augmentdata.py  common.py  copick_tools.py  core.py  dataloader.py  eval.py  smap.py
draft_entry_points/: step2_launch_copick_training.py  step2_launch_mrc_training.py  step3_copick_inference.py  step3_mrc_inference.py  step3_parallel_copick_inference.py  step4_parallel_copick_localization_evaluation.py
parallel_inference/: step3_click_parallel_copick_inference.py  step3_parallel_copick_inference.py  step4_click_parallel_copick_localization_evaluation.py  step4_parallel_copick_localization_evaluation.py
