[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jdeep-finder"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

version = "0.4.0"
dependencies = [
    "lxml",
    "numpy",
    "copick @ git+https://github.com/uermel/copick.git@397d630",
    "trimesh",    
    "mrcfile",
    "matplotlib",    
    "scikit-learn",
    "scikit-image",
]

authors = [
  {name = "Jonathan Schwartz", email = "jonathan.schwartz@czii.org"},
  {name = "Kyle I. S. Harrington", email = "kyle@kyleharrington.com"},
]

description = "Definitions for a collaborative cryoET annotation tool."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cryoet", "cryo-et", "tomography", "annotation", "segmentation", "collaborative", "copick"]