[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jdeep-finder"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

version = "0.4.0"
dependencies = [
    "tensorflow>=2.11.1",
    "lxml>=4.9.3",
    "numpy<2",
    "copick @ git+https://github.com/uermel/copick.git@397d630",
    "trimesh",    
    "mrcfile>=1.4.3",
    "matplotlib>=3.8.1",
    "scikit-learn==1.3.2",
    "scikit-image==0.22.0",
    "starfile",
    "ome-zarr",
]

authors = [
  {name = "Jonathan Schwartz", email = "jonathan.schwartz@czii.org"},
  {name = "Kyle I. S. Harrington", email = "kyle@kyleharrington.com"},
]

description = "Definitions for a collaborative cryoET annotation tool."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cryoet", "cryo-et", "tomography", "annotation", "segmentation", "collaborative", "copick"]

[project.scripts]
step1 = "step1:cli"

[tool.hatch.build.targets.wheel]
packages = ["deepfinder"]

[tool.hatch.metadata]
allow-direct-references = true