[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "jdeep-finder"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

version = "0.4.0"
dependencies = [
    "tensorflow[and-cuda]",  
    "lxml",
    "numpy",
    "copick",
    "trimesh",
    "mrcfile",
    "matplotlib",
    "scikit-learn",
    "scikit-image",
]

authors = [
  {name = "Jonathan Schwartz", email = "jonathan.schwartz@czii.org"},
  {name = "E. Moebel", email = "emmanuel.moebel@gmail.com"},
]

description = "Definitions for a collaborative cryoET annotation tool."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cryoet", "cryo-et", "tomography", "annotation", "segmentation", "collaborative", "copick"]